www/skins/default/style.css
/* ... */
#panelCloseButton {
	position: absolute;
	width: 75px;
	left: 50%;
	margin-left: -42.5px;
	background: #333;
	padding: 0 5px 4px 0;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-right-radius: 5px;
	-moz-border-radius-bottomleft: 5px;
	-webkit-border-bottom-left-radius: 5px;
	border-radius: 0 0 5px 5px;
}

.rowPanel {
	background: #333;
}

/* rowPanel edit finding form */
.rowPanel .myform {
	display: table;
	margin: 0 auto;
	color: white;
}

.rowPanel .myform h3,.rowPanel .myform .buttons {
	display: table;
	margin: 0 auto;
}

.rowPanel .myform table tbody td {
	padding: 0;
}

/* rowPanel history */
.rowPanel h3 {
	width: 110px;
	margin: 0 auto;
	color: white;
	white-space: nowrap;
}

/* tables */
.data_table {
	margin: 0 auto;
	clear: both;
	width: 100%;
}

.data_table thead tr th.cb {
	padding: 3px 10px;
}

.data_table thead tr th {
	background-color: #e6EEEE;
	border: 1px solid white;
	font-weight: bold;
	padding: 3px 18px 3px 10px;
	cursor: pointer; *
	cursor: hand;
}

.data_table tfoot th {
	padding: 3px 18px 3px 10px;
	border: 1px solid black;
	font-weight: bold;
}

.data_table tbody td {
	padding: 3px 10px;
	vertical-align: top;
}

.data_table td.center {
	text-align: center;
}

/* DataTables sorting */
.sorting_asc {
	background: #E6EEEE url('../../img/sort_asc.png') no-repeat center right
		;
}

.sorting_desc {
	background: #E6EEEE url('../../img/sort_desc.png') no-repeat center
		right;
}

.sorting {
	background: #E6EEEE url('../../img/sort_both.png') no-repeat center
		right;
}

.sorting_asc_disabled {
	background: #E6EEEE url('../../img/sort_asc_disabled.png') no-repeat
		center right;
}

.sorting_desc_disabled {
	background: #E6EEEE url('../../img/sort_desc_disabled.png') no-repeat
		center right;
}

/* Row classes */
tr.even {
	background-color: #F0F0F6;
}

tr.odd {
	background-color: white;
}

tr.s1 {
	color: darkred;
}

tr.s2 {
	color: orangered;
}

tr.s3 {
	color: goldenrod;
}

tr.s0,tr.s4 {
	
}

tr.select {
	background-color: #D7E8F2;
}

/* table cell images */
table tbody tr td img {
	margin: 0 3px;
}

/* table cell links */
table tbody td a {
	text-decoration: none;
	color: #000;
}

/* Datatables paginate buttons */
.paginate_enabled_first,.paginate_enabled_previous,.paginate_enabled_next,.paginate_enabled_last,.paginate_disabled_first,.paginate_disabled_previous,.paginate_disabled_next,.paginate_disabled_last
	{
	height: 16px;
	width: 16px;
	margin-left: 3px;
	float: left;
}

.paginate_enabled_first {
	background-image: url('../../img/arrow_first.png');
}

.paginate_enabled_previous {
	background-image: url('../../img/arrow_previous.png');
}

.paginate_enabled_next {
	background-image: url('../../img/arrow_next.png');
}

.paginate_enabled_last {
	background-image: url('../../img/arrow_last.png');
}

.paginate_disabled_first {
	background-image: url('../../img/arrow_first_disabled.png');
}

.paginate_disabled_previous {
	background-image: url('../../img/arrow_previous_disabled.png');
}

.paginate_disabled_next {
	background-image: url('../../img/arrow_next_disabled.png');
}

.paginate_disabled_last {
	background-image: url('../../img/arrow_last_disabled.png');
}

/* begin Overlay */
.myoverlay { /* must be initially hidden */
	display: none;
}

/* begin Form */
.myoverlay {
	background-color: #333;
	padding: 15px 20px;
	color: #eee;
	width: 400px;
	margin: 0 auto;
	position: relative;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
}

#addFindingsIssue {
	width: 650px;
}

#addScan {
	width: 550px;
}

.myform fieldset {
	border: 0;
	margin: 0;
	padding: 0;
}

.myform h2 {
	color: #eee;
	margin-top: 0px;
}

.myform p {
	font-size: 11px;
}

.myform input {
	border: 1px solid #444;
	background-color: #666;
	padding: 5px;
	color: #ddd;
	font-size: 12px;
	margin: 2px;
	/* CSS3 spicing */
	text-shadow: 1px 1px 1px #000;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}

.myform input:focus {
	color: #fff;
	background-color: #777;
}

.myform input:active {
	background-color: #888;
}

/* button */ /*.myform button, .myoverlay button
{
	outline:0;
	border:1px solid #666;	
	background-color: #5D689A;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	-webkit-box-shadow: rgba(0, 0, 0, 0.496094) 0px 0.1em 0.2em;
	
	color: #FFF;
	cursor: pointer;
	padding: 3px 7px;
}*/ /* error message */
.error {
	height: 15px;
	background-color: #FFFE36;
	font-size: 11px;
	border: 1px solid #E1E16D;
	padding: 3px 10px;
	color: #000;
	z-index: 9999;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	-moz-border-radius-bottomleft: 0;
	-moz-border-radius-topleft: 0;
	-webkit-border-bottom-left-radius: 0;
	-webkit-border-top-left-radius: 0;
	border-radius: 0 4px 4px 0;
	-moz-box-shadow: 0 0 6px #ddd;
	-webkit-box-shadow: 0 0 6px #ddd;
}

/* field label */
label {
	display: inline;
	color: white;
	/*margin-top: 15px;*/
}

/* loading message */
#loading {
	top: 50%;
	left: 50%;
	position: absolute;
	margin-left: -100px;
	width: 200px;
	text-align: center;
	display: none;
	margin-top: -10px;
	background: #000;
	color: #FFF;
	padding-top: 2em;
	padding-bottom: 2em;
}

